--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NestedRecyclerSample</string>
     <string name="title_activity_compose">ComposeActivity</string>
+    <string name="image">Image</string>
 </resources>
